# NoC-Spin

./: .gitignore  CMakeLists.txt  README.md
docs/: diagramas_mermaid.md
scripts/: run_tests.sh
sim/: log_simulacao.txt  noc_trace.vcd
src/network/: spin_network.h
src/packet/: flit.h
src/router/: arbiter.h  central_buffer.h  input_fifo.h  router.h
src/testbench/: main.cpp  testbench.h
